--- a/index.html
+++ b/index.html
@@ -9,60 +9,63 @@
 </head>
 <body>
     <div class="header">
-        <h2>Header Logo</h2>
+        <div class="header_text">
+            <h3 style="font-weight: bold;">Header Logo</h3>
 
-        <ul>
-            <p>header link one</p>
-            <p>header link two</p>
-            <p>header link three</p>
-        </ul>
+            <ul>
+                <p class="pt18">header link one</p>
+                <p class="pt18">header link two</p>
+                <p class="pt18">header link three</p>
+            </ul>
+        </div>
     </div>
 
-    <div class="subheader">
+   <div class="subheader">
         <div class="desc">
             <h1>This website is awesome</h1>
-            <h3>This website has some subtext that goes here under
+            <h4 class="pt18">This website has some subtext that goes here under
                 the main title. It's a smaller font and the color is lower contrast.
-            </h3>
-
+            </h4>
             <button>Sign up</button>
         </div>
-
-        <img alt="this is a placeholder for an image">
+        <img id="main_image" src="images/IMG_2081.JPG" alt="this is a placeholder for an image">
     </div>
+
 
     
 
-    <h1 class="s2_title">Some random information</h1>
+   <div class="s2">
+        <h2 class="s2_title">Some random information</h2>
 
-   <div class="image_row">
+         <div class="image_row">
 
-        <div class="image_with_text">
-            <img src="./images/pngfind.com-logotipo-png-4412661.png">
-            <p>this is some subtext under an illustration of an image</p>
-        </div>
+            <div class="image_with_text">
+                <img class="info_images" src="./images/white.png">
+                <p>this is some subtext under an illustration of an image</p>
+            </div>
 
-        <div class="image_with_text">
-            <img src="./images/pngfind.com-logotipo-png-4412661.png">
-            <p>this is some subtext under an illustration of an image</p>
-        </div>
+            <div class="image_with_text">
+                <img class="info_images" src="./images/white.png">
+                <p>this is some subtext under an illustration of an image</p>
+            </div>
 
-        <div class="image_with_text">
-            <img src="./images/pngfind.com-logotipo-png-4412661.png">
-            <p>this is some subtext under an illustration of an image</p>
-        </div>
+            <div class="image_with_text">
+                <img class="info_images" src="./images/white.png">
+                <p>this is some subtext under an illustration of an image</p>
+            </div>
 
-        <div class="image_with_text">
-            <img src="./images/pngfind.com-logotipo-png-4412661.png">
-            <p>this is some subtext under an illustration of an image</p>
+            <div class="image_with_text">
+                <img class="info_images" src="./images/white.png">
+                <p>this is some subtext under an illustration of an image</p>
+            </div>
         </div>
    </div>
 
     <div class="s3">
         <div class="testimonial">
-            <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            <h2 class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
-            </em>
+            </h2>
 
             <h4 class="speaker">-Thor, God of Thunder</h4>
         </div>
@@ -72,11 +75,13 @@
 
     <div class="last_section">
         <div class="contact_us">
-            <h4>Call to action! It's time!</h4> 
+            <div class="contact_text">
+                <h4>Call to action! It's time!</h4> 
 
-            <p>sign up for our product by clicking that button right over there!</p>
+                <p>sign up for our product by clicking that button right over there!</p>
+            </div>
 
-            <button>sign up</button>
+            <button class="bottom_signup">Sign up</button>
         </div>
     </div>
 </body>
