--- a/index.html
+++ b/index.html
@@ -10,64 +10,88 @@
 <body>
     <div class="header">
         <div class="header_text">
-            <h3 style="font-weight: bold;">Header Logo</h3>
+            <h3 style="font-weight: 900">cedric's photo gallery</h3>
 
             <ul>
-                <p class="pt18">header link one</p>
-                <p class="pt18">header link two</p>
-                <p class="pt18">header link three</p>
+                <p class="pt18">html5</p>
+                <p class="pt18">css</p>
+                <p class="pt18">javascript</p>
             </ul>
         </div>
     </div>
 
    <div class="subheader">
         <div class="desc">
-            <h1>This website is awesome</h1>
-            <h4 class="pt18">This website has some subtext that goes here under
-                the main title. It's a smaller font and the color is lower contrast.
-            </h4>
-            <button>Sign up</button>
+            <div class="desc_text">
+                <h1>A few shots from Montreal</h1>
+                <h4 class="pt18">Displayed on this page is a few of my favourite shots from my trip to Mont-Tremblant in early July of 2025. The photos
+                    were taken on the Canon EOS M, an old APS-C mirrorless camera.
+                </h4>
+                <a href="https://en.canon-cna.com/for_home/product_finder/cameras/digital_slr/eos_m/" rel="noreferrer" target="_blank"><button id="helper">find my camera here</button></a>
+            </div>
+
+            <img id="main_image" src="images/IMG_2246.JPG" alt="this is a placeholder for an image">
         </div>
-        <img id="main_image" src="images/IMG_2081.JPG" alt="this is a placeholder for an image">
     </div>
 
 
     
 
    <div class="s2">
-        <h2 class="s2_title">Some random information</h2>
+        <h2 class="s2_title">My Eight Favourite Shots</h2>
 
          <div class="image_row">
 
             <div class="image_with_text">
-                <img class="info_images" src="./images/white.png">
-                <p>this is some subtext under an illustration of an image</p>
+                <img src="./images/IMG_2215.JPG">
+                <p>a ski lift with the hills below</p>
             </div>
 
             <div class="image_with_text">
-                <img class="info_images" src="./images/white.png">
-                <p>this is some subtext under an illustration of an image</p>
+                <img src="./images/IMG_2237.JPG">
+                <p>the rooftops riddled with decorative flags</p>
             </div>
 
             <div class="image_with_text">
-                <img class="info_images" src="./images/white.png">
-                <p>this is some subtext under an illustration of an image</p>
+                <img src="./images/IMG_2111.JPG">
+                <p>a delicious strawberry crepe</p>
             </div>
 
             <div class="image_with_text">
-                <img class="info_images" src="./images/white.png">
-                <p>this is some subtext under an illustration of an image</p>
+                <img src="./images/IMG_2164.JPG">
+                <p>montreal architecture from a cable car</p>
+            </div>
+        </div>
+
+        <div class="image_row">
+            <div class="image_with_text">
+                <img src="./images/IMG_2124.JPG">
+                <p> a beautiful flower</p>
+            </div>
+
+            <div class="image_with_text">
+                <img src="./images/IMG_2190.JPG">
+                <p>some nice steak and fries</p>
+            </div>
+
+            <div class="image_with_text">
+                <img src="./images/IMG_2120.JPG">
+                <p>the mont-tremblant blues festival</p>
+            </div>
+
+            <div class="image_with_text">
+                <img src="./images/IMG_2213.JPG">
+                <p>trees overlooking the scenic mountains</p>
             </div>
         </div>
    </div>
 
     <div class="s3">
         <div class="testimonial">
-            <h2 class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            <h2>"Photography is the power of observation, not the application of technology."
             </h2>
 
-            <h4 class="speaker">-Thor, God of Thunder</h4>
+            <h4>- Ken Rockwell</h4>
         </div>
     </div>
 
@@ -78,7 +102,7 @@
             <div class="contact_text">
                 <h4>Call to action! It's time!</h4> 
 
-                <p>sign up for our product by clicking that button right over there!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
             </div>
 
             <button class="bottom_signup">Sign up</button>
