--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
                 <p class="pt18">javascript</p>
             </ul>
         </div>
+
+        
     </div>
 
+
+    <hr class="divider">
+    
    <div class="subheader">
         <div class="desc">
             <div class="desc_text">
