--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 <body>
     <div class="header">
         <div class="header_text">
-            <h3 style="font-weight: 900">cedric's photo gallery</h3>
+            <h3 style="font-weight: 900">A Photo Gallery</h3>
 
             <ul>
-                <p class="pt18">html5</p>
-                <p class="pt18">css</p>
-                <p class="pt18">javascript</p>
+                <p class="pt18">HTML5</p>
+                <p class="pt18">CSS</p>
             </ul>
         </div>
 
@@ -29,10 +28,10 @@
         <div class="desc">
             <div class="desc_text">
                 <h1>A few shots from Montreal</h1>
-                <h4 class="pt18">Displayed on this page is a few of my favourite shots from my trip to Mont-Tremblant in early July of 2025. The photos
+                <h4 class="pt18">Displayed on this page is a few of my favourite photos from my trip to Mont-Tremblant in early July of 2025. The photos
                     were taken on the Canon EOS M, an old APS-C mirrorless camera.
                 </h4>
-                <a href="https://en.canon-cna.com/for_home/product_finder/cameras/digital_slr/eos_m/" rel="noreferrer" target="_blank"><button id="helper">find my camera here</button></a>
+                <a href="https://en.canon-cna.com/for_home/product_finder/cameras/digital_slr/eos_m/" rel="noreferrer" target="_blank"><button id="helper">Find my camera here</button></a>
             </div>
 
             <img id="main_image" src="images/IMG_2246.JPG" alt="this is a placeholder for an image">
@@ -43,50 +42,50 @@
     
 
    <div class="s2">
-        <h2 class="s2_title">My Eight Favourite Shots</h2>
+        <h2 class="s2_title">My Favourite Shots</h2>
 
          <div class="image_row">
 
             <div class="image_with_text">
                 <img src="./images/IMG_2215.JPG">
-                <p>a ski lift with the hills below</p>
+                <p>A ski lift with the hills below</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2237.JPG">
-                <p>the rooftops riddled with decorative flags</p>
+                <p>The rooftops riddled with decorative flags</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2111.JPG">
-                <p>a delicious strawberry crepe</p>
+                <p>A delicious strawberry crepe</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2164.JPG">
-                <p>montreal architecture from a cable car</p>
+                <p>Montreal architecture from a cable car</p>
             </div>
         </div>
 
         <div class="image_row">
             <div class="image_with_text">
                 <img src="./images/IMG_2124.JPG">
-                <p> a beautiful flower</p>
+                <p> A beautiful flower</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2190.JPG">
-                <p>some nice steak and fries</p>
+                <p>Some nice steak and fries</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2120.JPG">
-                <p>the mont-tremblant blues festival</p>
+                <p>The Mont-Tremblant Blues Festival</p>
             </div>
 
             <div class="image_with_text">
                 <img src="./images/IMG_2213.JPG">
-                <p>trees overlooking the scenic mountains</p>
+                <p>Trees overlooking the scenic mountains</p>
             </div>
         </div>
    </div>
@@ -105,13 +104,18 @@
     <div class="last_section">
         <div class="contact_us">
             <div class="contact_text">
-                <h4>Call to action! It's time!</h4> 
+                <h3>Do you love photography?</h3> 
 
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <p>I personally found Ken Rockwell's guide really useful when learning how to navigate around my old camera, the Nikon D700.
+                </p>
             </div>
 
-            <button class="bottom_signup">Sign up</button>
+            <a href="https://www.kenrockwell.com/" rel="noreferrer" target="_blank"><button class="bottom_signup">His website</button></a>
         </div>
+    </div>
+
+    <div class="copyright">
+        <h4>made with hope for the future</h4>
     </div>
 </body>
 </html>
