--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
     <link rel="icon" type="image/png" href="./images/image.png">
     <link rel="stylesheet" href="./style.css">
-
 </head>
+
+<script src="./script.js"></script>
+
+
 <body>
     <div class="header">
         <div class="header_text">
